--- a/datasets/datasets.org
+++ b/datasets/datasets.org
@@ -347,19 +347,22 @@ List and manage datasets.
 | SDR gain                | 70 dB              |
 
 #+CAPTION: Profiles
-| Name | Component      | Nb. traces * Nb. AES | POI algorithm | POI number |  \rho | \sigma |
-|------+----------------+----------------------+---------------+------------+-------+--------|
-| P0   | Amplitude      | 8000 * 1             | r             |          1 |   0.2 |      1 |
-| P1   | Phase rotation | 8000 * 1             | r             |          1 | 0.075 |    1.5 |
-| P2   | Amplitude      | 12000 * 1            | r             |          1 |  0.25 |    0.9 |
-| P3   | Phase rotation | 12000 * 1            | r             |          1 | 0.075 |    1.5 |
+| Name | Component      | Nb. traces * Nb. AES | POI algorithm | POI number |  \rho |     \sigma |
+|------+----------------+----------------------+---------------+------------+-------+------------|
+| P0   | Amplitude      | 8000 * 1             | r             |          1 |   0.2 |          1 |
+| P2   | Amplitude      | 65000 * 1            | r             |          1 | 0.275 |        0.8 |
+| P4   | Amplitude      | 65000 * 1            | r             |          2 | 0.275 | 0.8 ; 1.25 |
+| P1   | Phase rotation | 8000 * 1             | r             |          1 | 0.075 |        1.5 |
+| P3   | Phase rotation | 65000 * 1            | r             |          1 | 0.075 |          1 |
 
 #+CAPTION: Attacks
 | Name | Profile  | Nb. traces * Nb. AES | Key rank | Median(PGE) | Hamming dist. |
 |------+----------+----------------------+----------+-------------+---------------|
 | A0   | External | 40000 * 1            |    2^127 |         128 |            64 |
 | A1   | P0       | 32000 * 1            |     2^60 |           7 |            27 |
-| A2   | P2       | 32000 * 1            |     2^60 |           5 |            31 |
+| A2   | P2       | 41000 * 1            |          |             |               |
+| A3   | P4       | 41000 * 1            |          |             |               |
+| A4   | P3       | 41000 * 1            |          |             |               |
 
 - Based :: On [[id:c2b4dc98-bf62-4225-8dfe-da6e02967282][[2024-04-23 mar.]​]] for hardware and [[id:0936568c-d3f9-4c18-841f-5dadecf0118a][[2024-04-23 mar.]​]] for
   software.
