--- a/datasets/datasets.org
+++ b/datasets/datasets.org
@@ -356,13 +356,14 @@ List and manage datasets.
 | P3   | Phase rotation | 65000 * 1            | r             |          1 | 0.075 |          1 |
 
 #+CAPTION: Attacks
-| Name | Profile  | Nb. traces * Nb. AES | Key rank | Median(PGE) | Hamming dist. |
-|------+----------+----------------------+----------+-------------+---------------|
-| A0   | External | 40000 * 1            |    2^127 |         128 |            64 |
-| A1   | P0       | 32000 * 1            |     2^60 |           7 |            27 |
-| A2   | P2       | 41000 * 1            |          |             |               |
-| A3   | P4       | 41000 * 1            |          |             |               |
-| A4   | P3       | 41000 * 1            |          |             |               |
+| Name | Profile  | Nb. traces * Nb. AES | Key rank (min / round) | Median(PGE) | Hamming dist. |
+|------+----------+----------------------+------------------------+-------------+---------------|
+| A0   | External | 40000 * 1            | 2^127                  |         128 |            64 |
+| A1   | P0       | 32000 * 1            | 2^57 / 2^60            |           7 |            27 |
+| A2   | P2       | 40000 * 1            | 2^57 / 2^60            |           7 |            27 |
+| A3   | P4       | 40000 * 1            | 2^56 / 2^62            |           5 |            26 |
+| A4   | P3       | 40000 * 1            | 2^62 / 2^62            |           6 |            32 |
+| A5   | P4 + P3  | 40000 * 1            | 2^59 / 2^62            |           7 |            27 |
 
 - Based :: On [[id:c2b4dc98-bf62-4225-8dfe-da6e02967282][[2024-04-23 mar.]​]] for hardware and [[id:0936568c-d3f9-4c18-841f-5dadecf0118a][[2024-04-23 mar.]​]] for
   software.
