--- a/experiments/experiments.org
+++ b/experiments/experiments.org
@@ -208,17 +208,31 @@ Python demonstration of dataset loading and traces computation (sent to Karel).
   to 0). This one cannot be used as baseline to compare with LDO directly, but
   can be used to compare with [[id:be4d126d-5ac1-43cf-85b0-4af441196007][[2024-05-15 mer.] ICACHE enabled]].
   
-** [2024-05-15 mer.] Profiling with ICACHE enabled
+** DONE [2024-05-15 mer.] Profiling with ICACHE enabled
+CLOSED: [2024-05-17 ven. 15:16]
 :PROPERTIES:
 :DIR:      2024-05-15_profile-icache-on
 :ID:       be4d126d-5ac1-43cf-85b0-4af441196007
 :END:
 
+*Goal*
+
 - Creation of a profile on amplitude with repetitions using custom firmware
   with the instruction cache enabled (branch =expe/source-flash-icache-on=).
+
+*Base*
+
 - Script copied from [[id:11b1c7e1-8793-41ca-9a5e-1db6d355692c][[2024-05-15 mer.]​]].
-- Result:
-  - XXX
+
+*Result*
+
+- Observation :: Radio capture contains "holes" due to TX switching OFF and ON
+  between packets (as usual) but also new holes. Assumption is that those holes
+  are when the CPU is fetching instructions from the cache and not from the
+  RAM. "Hopefully", we are still able to construct profiles since we only
+  receive the =SubBytes= leak but not the other functions.
+- [[attachment:profile/amp_4000_r_1/]] :: OK
+- [[attachment:profile/phr_16000_r_1/]] :: OK
 
 ** FAIL [2024-05-17 ven.] Profile re-usage 1
 CLOSED: [2024-05-17 ven. 11:40]
@@ -258,4 +272,3 @@ CLOSED: [2024-05-17 ven. 14:51]
 
 #+print_bibliography:
 
-* Footnotes
